--- a/style.css
+++ b/style.css
@@ -82,13 +82,19 @@ select {
 }
 
 main{
-    margin-left: 0px;
+   padding: 30px;
+   border-radius: 10px;
+   background-image: url(images/Untitled.jpeg);
+   background-size: cover;
+    margin-left: 70px;
+    margin-top: 50px;
     height: 100%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     font-family: 'League Spartan', sans-serif;
+    box-shadow: 2px 10px 20px hsl(300, 43%, 22%);
 }
 .card{
     display: grid;
@@ -136,6 +142,7 @@ color: hsl(300, 43%, 22%);
 font-weight: 500;
 height: 55px;
 width: 400px;
+box-shadow: 5px 5px 10px hsl(300, 44%, 11%);
 }
 .review img{
   width: 20px;
@@ -143,13 +150,13 @@ width: 400px;
 }
 .top{
   animation-name: rating-animation-top;
-  animation-duration: 3s;
+  animation-duration: 2.5s;
   position: absolute;
   margin-top: 0px;
 }
 .mid{
   animation-name: rating-animation-mid;
-  animation-duration: 3s;
+  animation-duration: 2.5s;
   position: absolute;
   margin-left: 50px;
   margin-top: 70px;
@@ -157,7 +164,7 @@ width: 400px;
 }
 .bot{
   animation-name: rating-animation-bot;
-  animation-duration: 3s;
+  animation-duration: 2.5s;
   position: absolute;
   margin-left: 100px;
   margin-top: 140px;
@@ -225,7 +232,7 @@ width: 400px;
 }
 @keyframes rating-animation-mid{
   0%{
-    margin-left: 2000px;
+    margin-left: 3000px;
     position: absolute;
   }
   100%{
@@ -235,7 +242,7 @@ width: 400px;
 }
 @keyframes rating-animation-bot{
   0%{
-    margin-left: 2000px;
+    margin-left: 4000px;
     position: absolute;
   }
   100%{
